# claude-gmail-plugin

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-06-12-gmail-plugin.md
docs/superpowers/specs/: 2026-06-12-gmail-plugin-design.md
skills/gmail-drafts/: SKILL.md
skills/gmail-read/: SKILL.md
skills/gmail-send/: SKILL.md
skills/gmail-setup/: SKILL.md
src/gmail_plugin/: __init__.py  cli.py  config.py  drafts.py  imap_client.py  messages.py  mime_build.py  query.py  send.py
tests/: conftest.py  test_cli.py  test_config.py  test_drafts.py  test_imap_client.py  test_messages.py  test_mime.py  test_query.py  test_send.py
