[project]
name = "gmail-plugin"
version = "0.1.0"
description = "Operacje na skrzynce Gmail (IMAP/SMTP) jako skille Claude Code."
requires-python = ">=3.11"
dependencies = ["python-dotenv>=1.0"]

[project.scripts]
gmail = "gmail_plugin.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_plugin"]
